--- a/themes/toomby/templates/page-about-us.twig
+++ b/themes/toomby/templates/page-about-us.twig
@@ -27,7 +27,6 @@
 
     </div>
 </section>
-{{ post | print_r }}
-{% include "sections/other-staff.twig" with {'staff' : related} %}
+{% include "sections/other-staff.twig" %}
 {% endblock %}
 
