--- a/static/src/assets/scss/components/_staff-card.scss
+++ b/static/src/assets/scss/components/_staff-card.scss
@@ -1,10 +1,4 @@
 /* ---------- _staff-card.scss ---------- */
-$staff-card-height: 300px;
-
 .image.card.staff {
-  height: $staff-card-height;
-}
-
-.large-offset-1-5 {
-  margin-left: 12.5%;
+  height: inherit !important;
 }
