--- a/static/src/assets/scss/_custom-settings.scss
+++ b/static/src/assets/scss/_custom-settings.scss
@@ -59,7 +59,7 @@ h1, h2, h3, h4, h5, h6 {
   color: $color-primary;
 }
 
-section + section {
+section + section, .top-bar + section {
   margin-top: $spacing-huge;
 }
 
