--- a/static/src/assets/scss/components/_hero.scss
+++ b/static/src/assets/scss/components/_hero.scss
@@ -1,5 +1,6 @@
 /* ---------- _hero.scss ---------- */
 .hero {
+  margin-top: 0;
   background: url('../img/bg.jpg') 50% no-repeat;
   background-size: cover;
   text-align: center;
