--- a/themes/toomby/templates/sections/hero.twig
+++ b/themes/toomby/templates/sections/hero.twig
@@ -1,3 +1,4 @@
+{% if post.hasHero %}
 <section class="hero"
          {% if post.hero_image %}
          style="background-image: url({{ TimberImage(post.hero_image).src }})"
@@ -11,3 +12,4 @@
         </div>
     </div>
 </section>
+{% endif %}
