--- a/static/src/assets/scss/components/_hero.scss
+++ b/static/src/assets/scss/components/_hero.scss
@@ -1,6 +1,6 @@
 /* ---------- _hero.scss ---------- */
 .hero {
-  margin-top: 0;
+  margin-top: 0 !important;
   background: url('../img/bg.jpg') 50% no-repeat;
   background-size: cover;
   text-align: center;
@@ -21,6 +21,7 @@
   }
 
   .box {
+    padding: 1rem;
     background-color: $color-blue-box-background !important;
   }
 
