Main Menu branch

--- a/themes/toomby/templates/base.twig
+++ b/themes/toomby/templates/base.twig
@@ -24,7 +24,7 @@
         <div class="top-bar-left">
         </div>
         <div class="top-bar-right">
-            {% include "header/navigation.twig" with {'menu': menu.get_items} %}
+            {% include "header/navigation.twig" with {'menu': main_menu.get_items} %}
         </div>
     </div>
 </div>
