--- a/themes/toomby/templates/sections/article-card.twig
+++ b/themes/toomby/templates/sections/article-card.twig
@@ -1,15 +1,15 @@
-{% if related_posts|length > 0 %}
+{% if post.related()|length > 0 %}
 <section class="latest-news section box" data-equalizer data-equalize-on="medium">
     <div class="row">
         <h2>Related News</h2>
 
-        {% for article in related_posts %}
+        {% for article in post.related() %}
         <div class="medium-4 columns card" data-equalizer-watch>
             <div class="card-section">
-                <span class="date">11 April 2017</span>
-                <h3>You Wont Believe this thing!</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.</p>
-                <a href="#">Read more</a>
+                <span class="date">{{article.date}}</span>
+                <h3>{{article.title}}</h3>
+                <p>{{article.teaser_text}}</p>
+                <a href="{{article.link}}">Read more</a>
             </div>
         </div>
         {% endfor %}
