--- a/themes/toomby/templates/archive-article.twig
+++ b/themes/toomby/templates/archive-article.twig
@@ -10,29 +10,18 @@
     <section class="articles">
         <div class="row">
 
-          <!-- TODO: Get Related + Display -->
-          <div class="large-6 medium-12 columns feature">
-              <img src="http://placehold.it/300x300" />
-              <h1>Firm Takes Skills Rein</h1>
-              <p>
-                  Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmark-sgrove right at the coast of the Semantics, a large language ocean.
-              </p>
-              <p class="read-more">
-                  <a href="#">Read More ></a>
-              </p>
-          </div>
+          {% set featured = true %}
 
-          <div class="large-3 medium-6 columns article">
-              <img src="http://placehold.it/250x150" />
-              <p class="date">
-                  11 Apr 2017
-              </p>
-              <h1>The Working Dog...</h1>
-              <p>
-                  Far far away, behind the word mountains, far from the countries...
-              </p>
-          </div>
-          <!-- TODO: Get Related + Display -->
+          {% for article in posts %}
+
+            {% if featured %}
+              {% include "sections/news-featured-article.twig" %}
+              {% set featured = false %}
+            {% else %}
+              {% include "sections/news-article.twig" %}
+            {% endif %}
+
+          {% endfor %}
 
         </div>
     </section>
