--- a/static/src/assets/scss/app.scss
+++ b/static/src/assets/scss/app.scss
@@ -52,6 +52,7 @@
 
 // Project-specific items
 @import 'custom-settings';
+@import 'icons';
 @import './components/top-bar';
 @import './components/other-staff';
 @import './components/image-card';
