--- a/themes/toomby/templates/html-header.twig
+++ b/themes/toomby/templates/html-header.twig
@@ -21,5 +21,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css">
     <link rel="pingback" href="{{site.pingback_url}}"/>
     {{function('wp_head')}}
