--- a/themes/toomby/templates/sections/hero.twig
+++ b/themes/toomby/templates/sections/hero.twig
@@ -1,7 +1,7 @@
 {% if post.hasHero %}
 <section class="hero"
          {% if post.hero_image %}
-         style="background-image: url({{ TimberImage(post.hero_image).src }})"
+         style="background-image: url({{ TimberImage(post.hero_image).src | resize(1920) }})"
          {% endif %}
 >
     <div class="row">
