--- a/themes/toomby/templates/home.twig
+++ b/themes/toomby/templates/home.twig
@@ -1,5 +1,90 @@
 {% extends "base.twig" %}
 
 {% block content %}
-<h2>Goodbye, World!</h2>
+
+{% include "sections/hero.twig" %}
+
+<!-- TODO Training Sections -->
+<section class="training">
+    <div class="row">
+
+        <div class="large-3 medium-6 columns">
+            <div class="image card">
+                <h2 class="title">Working Dogs &amp; Horses</h2>
+                <a href="#"><img src="http://www.fillmurray.com/300/400"></a>
+            </div>
+        </div>
+
+        <div class="large-3 medium-6 columns">
+            <div class="image card">
+                <h2 class="title">Ultimate Rural Training Centre</h2>
+                <a href="ultimate-rural-training-centre.html"><img src="http://www.fillmurray.com/300/400"> </a>
+            </div>
+        </div>
+
+        <div class="large-3 medium-6 columns">
+            <div class="image card">
+                <h2 class="title">(TEMT) Toomby Equine Muscular Therapy</h2>
+                <a href="#"><img src="http://www.fillmurray.com/300/400"> </a>
+            </div>
+        </div>
+
+        <div class="large-3 medium-6 columns">
+            <div class="image card">
+                <h2 class="title">EMM-TECH</h2>
+                <a href="#"><img src="http://www.fillmurray.com/300/400"> </a>
+            </div>
+        </div>
+
+    </div>
+</section>
+<!-- TODO Training Sections -->
+
+<!-- TODO Latest News -->
+<section class="latest-news section box" data-equalizer data-equalize-on="medium">
+    <div class="row">
+        <h2>Latest News</h2>
+
+        <div class="medium-4 columns">
+            <div class="card" data-equalizer-watch>
+                <div class="card-section">
+                    <span class="date">20 April, 2017</span>
+                    <h3>Firm Takes Skills Rein</h3>
+                    <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum
+                        eros
+                        erat nec nulla. Donec in ligula erat.</p>
+                </div>
+                <a href="#" class="read-more">Read More</a>
+            </div>
+        </div>
+
+        <div class="medium-4 columns">
+            <div class="card" data-equalizer-watch>
+                <div class="card-section">
+                    <span class="date">15 April, 2017</span>
+                    <h3>Working Dogs...</h3>
+                    <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum
+                        eros
+                        erat nec nulla. Donec in ligula erat.</p>
+                </div>
+                <a href="#" class="read-more">Read More</a>
+            </div>
+        </div>
+
+        <div class="medium-4 columns">
+            <div class="card" data-equalizer-watch>
+                <div class="card-section">
+                    <span class="date">11 April, 2017</span>
+                    <h3>Animal Educators Horsing Around</h3>
+                    <p>Phasellus consequat, lacus consequat faucibus accumsan, enim nunc rhoncus velit, vitae elementum
+                        eros
+                        erat nec nulla. Donec in ligula erat.</p>
+                </div>
+                <a href="#" class="read-more">Read More</a>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- TODO Latest News -->
+
 {% endblock %}
