Added branding option for hero background

--- a/themes/toomby/templates/home.twig
+++ b/themes/toomby/templates/home.twig
@@ -2,7 +2,20 @@
 
 {% block content %}
 
-{% include "sections/hero.twig" %}
+<!-- TODO Change to settings -->
+<div class="home hero" style="background-image: url('https://local.wordpress.dev/wp-content/uploads/2017/05/urtc-bg.jpg')">
+    <div class="row">
+        <div class="medium-8 medium-centered column">
+            <img src="https://local.wordpress.dev/wp-content/uploads/2017/05/logo-main.png">
+            <h1>Welcome to Wonderland Station</h1>
+            <p>Etiam nec risus nec massa ornare dapibus. Vivamus id cursus odio, at porta est. Sed a est justo.
+                Pellentesque efficitur mollis lorem non semper. Nam lacinia ante nunc, vel mattis odio lobortis et.
+                Aliquam eget risus sapien. Nulla facilisi. Nunc pulvinar, mauris ut suscipit tempor, lacus est mattis
+                tortor, eu efficitur risus nibh eget augue. </p>
+        </div>
+    </div>
+</div>
+<!-- TODO Change to settings -->
 
 <!-- TODO Training Sections -->
 <section class="training">
