--- a/themes/toomby/templates/single-article.twig
+++ b/themes/toomby/templates/single-article.twig
@@ -13,6 +13,6 @@
     </div>
 </section>
 
-{% include "sections/article-card.twig" %}
+{% include "sections/article-card.twig" with {'articles': post.articles(3, true)} %}
 
 {% endblock %}
