Updated CSS to force image-card images to be full height

--- a/static/src/assets/scss/components/_image-card.scss
+++ b/static/src/assets/scss/components/_image-card.scss
@@ -54,6 +54,7 @@ $card-height: 400px;
     width: 100%;
     overflow: hidden;
     opacity: 0.5;
+    height: 100%;
   }
   &:hover img {
     opacity: 1.0;
