--- a/static/src/assets/scss/pages/_article.scss
+++ b/static/src/assets/scss/pages/_article.scss
@@ -18,13 +18,20 @@
     padding-bottom: $spacing-small;
   }
 
-  figure {
+  img, figure {
     float: left;
     margin: 0 $spacing-large $spacing-large;
     border: 4px solid #fefefe;
     border-radius: 0;
     box-shadow: 0 0 0 1px hsla(0, 0%, 4%, .2);
     padding: $spacing-small;
+
+    img {
+      border: none;
+      padding: 0;
+      margin: 0;
+      float: none;
+    }
 
     &.alignright {
       float: right;
@@ -34,6 +41,8 @@
     &.aligncenter {
       display: block;
       float: none;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     &.alignleft {
