--- a/themes/toomby/templates/page-contact-us.twig
+++ b/themes/toomby/templates/page-contact-us.twig
@@ -1,109 +1,133 @@
 {% extends "base.twig" %}
 {% block content %}
-	<section class="sub-form section box">
-	    <form action="#" class="row medium-4">
-	        <h3>Subscribe to our mailing list</h3>
-	        <p>Keep up to date with our services and products.</p>
-	        <div class="input-group">
-	            <span class="input-group-label">Email</span>
-	            <input class="input-group-field" type="text">
-	            <div class="input-group-button">
-	                <input type="submit" class="button" value="Submit">
-	            </div>
-	        </div>
-	    </form>
-	</section>
-	<section class="contact-form">
-	    <div class="row">
-	        <div class="large-6 columns contact-box">
-	            <h3>Contact Us</h3>
-	            <form action="#">
-	                <label for="name">Name:</label>
-	                <input type="text" name="name" required>
-	                <label for="name">Phone:</label>
-	                <input type="text" name="phone" required>
-	                <label for="name">Email:</label>
-	                <input type="text" name="email" required>
-	                <label for="name">City/Town:</label>
-	                <input type="text" name="city">
-	                <label for="message">Message:</label>
-	                <textarea name="mesage"></textarea>
-	                <input type="submit" name="submit" class="expanded button">
-	            </form>
-	        </div>
-	        <div class="large-6 columns">
-	            <h3>Details</h3>
-	            <dl class="contact-list">
-	                <dt>Email:</dt>
-	                <dd>
-	                	<a href="mailto:dalesedgman73@gmail.com?Subject=Site20%Enquiry">
-	                	{{site.admin_email}}
-	                	</a>
-	            	</dd>
+<section class="sub-form section box">
+    <form action="#" class="row medium-4">
+        <h3>Subscribe to our mailing list</h3>
+        <p>Keep up to date with our services and products.</p>
+        <div class="input-group">
+            <span class="input-group-label">Email</span>
+            <input class="input-group-field" type="text">
+            <div class="input-group-button">
+                <input type="submit" class="button" value="Submit">
+            </div>
+        </div>
+    </form>
+</section>
+<section class="contact-form">
+    <div class="row">
 
-	            	{% if site_options.postal_address %}
-	                <dt>Postal Address:</dt>
-	                <dd>{{site_options.postal_address}}</dd>
-	            	{% endif %}
+        <div class="large-6 columns contact-box">
+            {% if contact.type == "error" %}
+            <div class="callout warning">
+                <h5>{{ contact.message }}</h5>
+            </div>
+            {% elseif contact.type == "success" %}
+            <div class="callout success">
+                <h5>{{ contact.message }}</h5>
+            </div>
+            {% endif %}
 
-	            	{% if site_options.phone_numbers %}
-	                <dt>Phone Numbers:</dt>
-	                <dd>				
-					{% for number in site_options.phone_numbers%}
-					<strong>{{number.name}}:</strong> {{number.phone}}<br>
-					{% endfor %}
-	                </dd>
-	            	{% endif %}
+            {% if contact.type != "success" %}
+            <h3>Contact Us</h3>
+            <form id="contact_form" method="post" action="{{ post.link }}#contact_form">
+                <label for="message_name">Name:</label>
+                <input type="text" id="message_name" name="message_name" required>
+                <label for="message_email">Email:</label>
+                <input type="text" id="message_email" name="message_email" required>
+                <label for="message_phone">Phone:</label>
+                <input type="text" id="message_phone" name="message_phone" required>
+                <label for="message_city">City/Town:</label>
+                <input type="text" id="message_city" name="message_city">
+                <label for="message_message">Message:</label>
+                <textarea name="message_message" id="message_message" rows="5" required></textarea>
+                <input type="submit" name="submitted" class="expanded button">
+            </form>
+            {% endif %}
+        </div>
+        <div class="large-6 columns">
+            <h3>Details</h3>
+            <dl class="contact-list">
+                <dt>Email:</dt>
+                <dd>
+                    <a href="mailto:{{site.admin_email}}?Subject=Site20%Enquiry">
+                        {{site.admin_email}}
+                    </a>
+                </dd>
 
-	            </dl>
-	        </div>
-	    </div>
-	</section>
-	<section class="map-section">
-	    <div class="row map-row">
-			{% if site_options.google_map %}
-			<h3>Where to Find Us</h3>
-			<div class="acf-map map" id="map">
-			</div>
+                {% if site_options.postal_address %}
+                <dt>Postal Address:</dt>
+                <dd>{{site_options.postal_address}}</dd>
+                {% endif %}
 
-	        <script>
-	        var googleMapsInfo = {{ site_options.google_map | json_encode()}};
-	        var siteInfo = {{ site | json_encode()}};
-	        var lat = Number(googleMapsInfo.lat);
-	        var lng = Number(googleMapsInfo.lng);
-	        var address = googleMapsInfo.address;
-	        var siteTitle = siteInfo.name;
-	        var content = "<h4>" + siteTitle + "</h4><p>" + address + "</p>";
-	        
-	        function initMap() {
-	            var location = {
-	                lat: lat,
-	                lng: lng
-	            };
-	            var map = new google.maps.Map(document.getElementById('map'), {
-	                zoom: 12,
-	                center: location,
-	                mapTypeId: 'hybrid',
-	                scrollwheel: false
-	            });
-	            var marker = new google.maps.Marker({
-	                position: location,
-	                map: map,
+                {% if site_options.phone_numbers %}
+                <dt>Phone Numbers:</dt>
+                <dd>
+                    {% for number in site_options.phone_numbers%}
+                    <strong>{{number.name}}:</strong> {{number.phone}}<br>
+                    {% endfor %}
+                </dd>
+                {% endif %}
 
-	            });
-	            var infowindow = new google.maps.InfoWindow({
-	                content: content,
-	                position: location,
-	                map: map
-	            });
+            </dl>
+        </div>
+    </div>
+</section>
+<section class="map-section">
+    <div class="row map-row">
+        {% if site_options.google_map %}
+        <h3>Where to Find Us</h3>
+        <div class="acf-map map" id="map">
+        </div>
 
-	            marker.addListener('click', function() {
-	                infowindow.open(map, marker);
-	            });
-	        }
-	        </script>
-	        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAFdy6HjA3FwsSAniy2Znro161tBK2t2M&callback=initMap" async defer></script>
-	    	{% endif %}
-	    </div>
-	</section>
+        <script>
+            var googleMapsInfo = {
+            {
+                site_options.google_map | json_encode()
+            }
+            }
+            ;
+            var siteInfo = {
+            {
+                site | json_encode()
+            }
+            }
+            ;
+            var lat = Number(googleMapsInfo.lat);
+            var lng = Number(googleMapsInfo.lng);
+            var address = googleMapsInfo.address;
+            var siteTitle = siteInfo.name;
+            var content = "<h4>" + siteTitle + "</h4><p>" + address + "</p>";
+
+            function initMap() {
+                var location = {
+                    lat: lat,
+                    lng: lng
+                };
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    zoom: 12,
+                    center: location,
+                    mapTypeId: 'hybrid',
+                    scrollwheel: false
+                });
+                var marker = new google.maps.Marker({
+                    position: location,
+                    map: map,
+
+                });
+                var infowindow = new google.maps.InfoWindow({
+                    content: content,
+                    position: location,
+                    map: map
+                });
+
+                marker.addListener('click', function () {
+                    infowindow.open(map, marker);
+                });
+            }
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAFdy6HjA3FwsSAniy2Znro161tBK2t2M&callback=initMap"
+                async defer></script>
+        {% endif %}
+    </div>
+</section>
 {% endblock %}
