--- a/themes/toomby/templates/sections/faq.twig
+++ b/themes/toomby/templates/sections/faq.twig
@@ -1,6 +1,6 @@
 {% if post.faq %}
 
-<section class="faq section">
+<section class="faq">
     <div class="row">
         <div class="columns">
             <h3>Frequently Asked Questions</h3>
