Image-cards on homepage now link to items instead of reloading the page

--- a/themes/toomby/templates/sections/image-card.twig
+++ b/themes/toomby/templates/sections/image-card.twig
@@ -8,7 +8,7 @@
       <div class="large-3 medium-6 columns">
         <div class="image card">
           <h2 class="title">{{timberPost.post_title}}</h2>
-          <a href="#"><img src="{{TimberImage(image).src}}"></a>
+          <a href="{{timberPost.link}}"><img src="{{TimberImage(image).src}}"></a>
         </div>
       </div>
 
