--- a/themes/toomby/templates/sections/files.twig
+++ b/themes/toomby/templates/sections/files.twig
@@ -14,7 +14,7 @@
                   <a href="{{ fa.guid }}" title="Download {{ fa.title }}">
                       <img src="{{ file.pdf_thumbnail }}" height=200 width=200>
                       <p>
-                        {{ fa.title }}
+                        <strong>{{ fa.title }}</strong>
                       </p>
                   </a>
               </div>
