--- a/themes/toomby/templates/single-clinic.twig
+++ b/themes/toomby/templates/single-clinic.twig
@@ -12,7 +12,7 @@
             </div>
             <div class="details">
                 {% if course.image %}
-                <img class="small-4 column" src="https://unsplash.it/600/600/?image=1081" alt="{{ clinic.title }}">
+                <img class="small-4 column" src="{{ TimberImage(course.image).src | resize(300) }}" alt="{{ clinic.title }}">
                 {% endif %}
                 <div class="description {% if course.image %} small-8 {% else %} small-12 {% endif %} column">
                     {{ course.description | wpautop }}
