--- a/themes/toomby/templates/single-clinic.twig
+++ b/themes/toomby/templates/single-clinic.twig
@@ -3,6 +3,14 @@
 {% block content %}
 {% include "sections/hero.twig" %}
 <section class="clinics">
+    <div class="row">
+        <div class="column">
+            {% if post.hasHero == false %}
+            <h1>{{ post.title }}</h1>
+            {% endif %}
+            {{ post.content | wpautop }}
+        </div>
+    </div>
     <div class="row" data-equalizer data-equalize-on="medium">
 
         {% for course in post.get_field('courses') %}
@@ -12,7 +20,8 @@
             </div>
             <div class="details">
                 {% if course.image %}
-                <img class="small-4 column" src="{{ TimberImage(course.image).src | resize(300) }}" alt="{{ clinic.title }}">
+                <img class="small-4 column" src="{{ TimberImage(course.image).src | resize(300) }}"
+                     alt="{{ clinic.title }}">
                 {% endif %}
                 <div class="description {% if course.image %} small-8 {% else %} small-12 {% endif %} column">
                     {{ course.description | wpautop }}
