Tweak news theme

--- a/static/src/assets/scss/_custom-settings.scss
+++ b/static/src/assets/scss/_custom-settings.scss
@@ -5,6 +5,7 @@ $color-corporate-orange: #FD6721;
 $color-corporate-blue: #010764;
 $color-corporate-grey: #8B8B8B;
 $color-corporate-offset-blue: #002B42;
+$color-link: #1779ba;
 
 /* --- Colors --- */
 $alpha-transparent: 0.0;
