--- a/themes/toomby/templates/sections/news-article.twig
+++ b/themes/toomby/templates/sections/news-article.twig
@@ -1,11 +1,16 @@
 <div class="large-3 medium-6 columns article end">
-    <img src="{{TimberImage(article.custom.image).src}}" alt="{{TimberImage(article.custom.image).alt}}" />
-    <p class="date">
-      {{article.post_date}}
-    </p>
-    <h1>{{article.post_title}}</h1>
-    <p>
-      {{article.teaser_text}}
-    </p>
-    <a href="{{article.link}}">Read more</a>
+    <a href="{{article.link}}">
+        <img class="thumbnail" src="{{TimberImage(article.custom.image).src}}"
+             alt="{{TimberImage(article.custom.image).alt}}"/>
+    </a>
+    <div class="title">
+        <a href="{{article.link}}" title="{{ article.title }}">
+            <h1>{{ article.title }}</h1>
+        </a>
+        <span class="date">
+            {{article.post_date|date('d M, Y')}}
+        </span>
+    </div>
+    {{ article.content | truncate(20, true) | wpautop }}
+    <a class="read-more" href="{{article.link}}">Read more</a>
 </div>
