--- a/themes/toomby/templates/sections/news-article.twig
+++ b/themes/toomby/templates/sections/news-article.twig
@@ -1,5 +1,5 @@
 <div class="large-3 medium-6 columns article end">
-    <a href="{{article.link}}">
+    <a class="image" href="{{article.link}}">
         <img class="thumbnail" src="{{TimberImage(article.custom.image).src}}"
              alt="{{TimberImage(article.custom.image).alt}}"/>
     </a>
