--- a/static/src/assets/scss/components/_articles.scss
+++ b/static/src/assets/scss/components/_articles.scss
@@ -8,11 +8,13 @@ $news-article-height: $news-feature-article-height / 2;
 
     .title {
       .date {
-        float: right;
+        display: block;
+        text-align: left;
+        font-size: $font-size-subtext;
+        margin-bottom: $spacing-small;
       }
       a {
         h1 {
-          float: left;
           text-align: left;
           font-size: $font-size-header;
           margin-bottom: $spacing-small;
@@ -21,10 +23,17 @@ $news-article-height: $news-feature-article-height / 2;
       }
     }
 
-    img {
-      margin-bottom: $spacing-medium;
-      height: auto;
+    a.image {
+      display: block;
       max-height: 200px;
+      margin-bottom: $spacing-medium;
+      overflow: hidden;
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: none;
+      object-position: center;
     }
 
     p {
@@ -37,11 +46,18 @@ $news-article-height: $news-feature-article-height / 2;
   .feature {
     text-align: center;
 
-    img {
+    a.image {
+      display: block;
+      height: 25rem;
+      max-height: 25rem;
       margin-bottom: $spacing-medium;
+    }
+
+    img {
       width: 100%;
-      height: auto;
-      min-height: 25rem;
+      height: 100%;
+      object-fit: none;
+      object-position: center;
     }
 
     h1 {
@@ -63,6 +79,7 @@ $news-article-height: $news-feature-article-height / 2;
       text-align: right;
       font-size: $font-size-subtitle;
       font-weight: bold;
+      margin-bottom: $spacing-medium;
     }
   }
 }
