--- a/themes/toomby/templates/sections/news-featured-article.twig
+++ b/themes/toomby/templates/sections/news-featured-article.twig
@@ -1,6 +1,6 @@
 <div class="large-6 medium-12 columns feature">
 
-    <a href="{{article.link}}">
+    <a class="image" href="{{article.link}}">
         <img class="thumbnail" src="{{TimberImage(article.custom.image).src}}"
              alt="{{TimberImage(article.custom.image).alt}}"/>
     </a>
